# TSGv3

./: .gitignore  CMakeLists.txt
A_Recycle临时代码/Devices/: CMakeLists.txt
A_Recycle临时代码/Devices/Header/: SerialParams.h  TSG_MainSerialPort.h
A_Recycle临时代码/Devices/Src/: TSG_MainSerialPort.cpp
A_Recycle临时代码/TSG_MainServer/: TSG_NetServer.cpp  TSG_RegeditEditor.cpp
A_Recycle临时代码/TSG_MainServer/header/: PublicVar.h
A_Recycle临时代码/TSG_MainServer/src/: TSGv3.0.0.cpp
DeviceSDK/: CMakeLists.txt
DeviceSDK/include/: DeviceSDK.h  MainServiceControll.h  SerialParams.h
DeviceSDK/src/: DeviceSDK.cpp  MainServiceControll.cpp
Documents/: 串口控制向上层控制模块返回结果.docx  串口消息解析返回MainServiceControll的值.docx
FaroSDK/: CMakeLists.txt
FaroSDK/include/: FaroControl.h  FaroParam.h  FaroParams.h  FaroSDK.h
FaroSDK/lib/: faro.ls.sdk.tlh  iqopen.tlh  iqopen.tli
FaroSDK/src/: FaroControl.cpp  FaroSDK.cpp
PublicVar/: PublicAlgorithm.h  PublicVar.h  TSG_Framework.h
TSG_CenterServer/: CMakeLists.txt
TSG_CenterServer/include/: DeviceParamController.h  MissionController.h  TSG_CenterServer.h  TSG_NetServer.h  TSG_RegeditEditor.h
TSG_CenterServer/src/: DeviceParamController.cpp  MissionController.cpp  TSG_CenterServer.cpp  TSG_NetServer.cpp  TSG_RegeditEditor.cpp
TSG_Dialog/: CMakeLists.txt  TSG_Dialog.cpp  TSG_Dialog.h
TSG_MainServer/: CMakeLists.txt  TSG_NetServer.h  TSG_RegeditEditor.h
TSG_MainServer/header/: TSG_MainProcess.h  TSG_NetServer.h
TSG_MainServer/src/: TSG_MainProcess.cpp  TSG_NetServer.cpp  TSG_RegeditEditor.cpp
TSG_NetWork/: CMakeLists.txt
TSG_NetWork/header/: QtTcpBaseHandler.h  QtTcpClientHandler.h  QtTcpServerHandler.h
TSG_NetWork/src/: QtTcpBaseHandler.cpp  QtTcpClientHandler.cpp  QtTcpServerHandler.cpp  TSG_NetWork.cpp
